--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.4.2",
     "react-native-reanimated": "^2.8.0",
-    "styled-components": "^5.3.5",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1"
+    "react-native-safe-area-context": "^4.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -29,16 +31,16 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^9.1.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "@testing-library/jest-native": "^4.0.5",
-    "@testing-library/react-native": "^9.1.0",
-    "@types/styled-components-react-native": "^5.1.3",
-    "jest-styled-components": "^7.0.8",
     "babel-jest": "^26.6.3",
+    "babel-plugin-styled-components": "^2.0.7",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
@@ -49,12 +51,12 @@
     "git-cz": "^4.9.0",
     "husky": "^8.0.1",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^13.0.2",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
     "styled-components-react-native": "^1.0.0",
-    "babel-plugin-styled-components": "^2.0.7"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
