--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^26.6.3",
     "jest-styled-components": "^7.0.8",
     "lint-staged": "^13.0.2",
+    "metro-babel-register": "^0.71.1",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
     "styled-components-react-native": "^1.0.0",
